Release Note

* 1/14/2015
  * changed getTobeProcessed to use accurate estimation when reading secondary files
  * changed insertFiles to release more files for event-split while the parent is running
  * fixed insertFiles to take event-level splitting into account when setting open to mutables

* 1/13/2015
  * fixed getFileList for did
  * fixed insertFiles to use master status for status of mutable secondary
  * removed origin setting from reassignTasks
  * fixed reassignTasks to work during the task is being assigned

* 1/12/2015
  * fixed slow lookup table in insertFiles 

* 1/11/2015
  * introduced cutoff for walltime calculation using scout jobs

* 1/9/2015
  * fixed TaskBroker not to read all files
  * introduced nFilesPerGroup
  * increased the max file limit in datasets to 200k
  * changed CF to automatically set num_records for seq_number

* 1/5/2015
  * fixed sufficient file check in CF for multiple input streams

* 12/29/2014
  * fixed getFiles for UnknownDataset

* 12/24/2014
  * fixed CF to take nEventsPerJob and nFilesPerFile for seq_number

* 12/23/2014
  * fixed CF for noInput+seqNum

* 12/19/2014
  * changed AtlasBrokerage to task BL into account

* 12/18/2014
  * added num_records to dataset attributes
  * removed lifetime setting for user datasets
  * added machinery to throttle tasks

* 12/17/2014
  * added unlockSingleTask_JEDI
  * fixed getAvailableFiles for checkCompleteness

* 12/16/2014
  * changed for originpandaid
  * added more debug messages for reassignTask
  * setting job.attemptNr=max(file.attemptNr)
  * checking mutable before preparing tasks
  * enabled consistency check for chained prod tasks

* 12/15/2014
  * fixed getTasksToExecCommand_JEDI for recovery from pending
  * added reqID to JobSpec
  * setting lifetime to panda/user datasets using rucio api
  * introduced seq_number
  * added support for offset of seq_number

* 12/12/2014
  * added junk file cleaner in AtlasPP
  * improved AtlasTS to open output/log datasets
